2007-03-16  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_error_msg), (bvw_bus_message_cb):
	(poll_for_state_change_full):
	  Make debug output on errors a bit more terse; also mention URI
	  that caused the error.

2007-03-12  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-menu.c: (about_action_callback):
	  Add myself to credits in about dialog.

2007-03-12  Bastien Nocera  <hadess@hadess.net>

	* data/vanity.desktop.in.in: remove obsolete "Application"
	category (Closes: #417365)

2007-03-11  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c: (totem_volume_create):
	Patch from Christof Krüger <gnome@pop2wap.net> to make scrolling
	on the volume button go in the right direction (Closes: #417210)

============ Version 2.18.0

2007-03-09  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.18.0

2007-03-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPluginGlue.cpp: Patch from
	Alexander Sack <asac@jwsdot.com> to keep the dbus-glib
	library in memory, to avoid crashes when switching themes
	(Closes: #415389)

2007-03-07  Frederic Crozat  <fcrozat@mandriva.com>

	reviewed by: Bastien and release-team.

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_open_with_subtitle):
	Fix audio only playback in audio/video container (ogg for instance).
	(Closes: #405883)

2007-03-06  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/totem-remote.c: (totem_remote_init):
	Don't allocate a lirc_config structure - LIRC will do that on its own.
	If lirc_readconfig fails, don't pass data to LIRC that it didn't
	create in the first place. (Closes: #415326)

2007-03-05  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Patch from Damien Carbery <damien.carbery@sun.com>
	to not use the "-q" grep option (Closes: #414961)

2007-03-05  Bastien Nocera  <hadess@hadess.net>
