@@ -1,3 +1,10 @@
+2007-03-18  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	(bacon_video_widget_new):
+	  Fix build when compiling against a GStreamer core version where the
+	  debugging system has been disabled (Closes: 418589).
+
 2007-03-16  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
